# kubedeck

./: .gitattributes  .gitignore  BETA_REGRESSION_CHECKLIST.md  CHANGELOG.md  KubeDeck_Codex_Prompt.md  KubeDeck_Technical_Specification.md  NAMESPACE_DRAWER_HOTFIX_NOTES.md  NODE_MIGRATION_PROGRESS.md  PATCH_NOTES.md  README.md  README.ru.md  REFACTOR_HOTFIX_1_NOTES.md  REGRESSION_CHECKLIST_2.0.5.md  REGRESSION_CHECKLIST_2.0.6.md  REGRESSION_CHECKLIST_2.1.0.md  REGRESSION_CHECKLIST_2.2.0.md  REGRESSION_CHECKLIST_2.3.0.md  REGRESSION_CHECKLIST_2.3.1.md  REGRESSION_CHECKLIST_2.3.2.md  REGRESSION_CHECKLIST_2.4.0.md  REGRESSION_CHECKLIST_2.4.2.md  REGRESSION_CHECKLIST_2.4.4.md  REGRESSION_CHECKLIST_2.4.5.md  REGRESSION_CHECKLIST_2.5.0.md  REGRESSION_CHECKLIST_2.5.1.md  REGRESSION_CHECKLIST_2.5.2.md  REGRESSION_CHECKLIST_2.6.0.md  REGRESSION_CHECKLIST_2.7.1.md  REGRESSION_CHECKLIST_2.7.2.md  RELEASE-NOTES-1.0.5.md  RELEASE_NOTES_2.0.0-beta.1.md  RELEASE_NOTES_2.0.5.md  RELEASE_NOTES_2.0.6.md  RELEASE_NOTES_2.1.0.md  RELEASE_NOTES_2.2.0.md  RELEASE_NOTES_2.3.0.md  RELEASE_NOTES_2.3.1.md  RELEASE_NOTES_2.4.0.md  RELEASE_NOTES_2.4.3.md  RELEASE_NOTES_2.5.1.md  (+12 more)
apps/backend/: pyproject.toml  requirements.lock.txt  requirements.txt
apps/backend/kubedeck_backend/: logging_config.py  main.py  security.py
apps/backend/tests/: test_llm_context.py  test_normalizers.py  test_problems.py  test_relations.py  test_resource_cache.py  test_runtime_contracts.py  test_safety_helpers.py  test_validation_contracts.py  test_watch_events.py  test_watch_manager.py
docs/: NODE_API_CONTRACT.md  (+38 more)
(+311 files in other folders)
