[project]
name = "kubedeck-backend"
version = "1.1.1"
description = "KubeDeck FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.7.4",
  "PyYAML==6.0.2",
  "paramiko==3.5.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]


